tenzir/integration/data/reference/parser/test_multiline_operators/step_00.ref
error: could not parse token
 --> /dev/stdin:5:3
  |
5 | h \
  |   ^ 
  |
error: could not parse token
 --> /dev/stdin:7:4
  |
7 |   j\
  |    ^ 
  |